--- a/desi_karaoke/android/gradle.properties
+++ b/desi_karaoke/android/gradle.properties
@@ -2,5 +2,5 @@ android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536M
 android.enableR8=true
-DESIKARAOKE_JKS_FILE=F:/jksfile/DesiKaraoke.jks
-ANDROID_STORE_PASSWORD=anDroid10
+DESIKARAOKE_JKS_FILE=E:/Flutter/DesiKaraoke.jks 
+ANDROID_STORE_PASSWORD=Hello1234
