--- a/desi_karaoke/android/app/build.gradle
+++ b/desi_karaoke/android/app/build.gradle
@@ -108,7 +108,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.amazonaws:aws-android-sdk-s3:2.18.0'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.18.0'//work
 }
 
 apply plugin: 'com.google.gms.google-services'
