--- a/desi_karaoke/android/gradle.properties
+++ b/desi_karaoke/android/gradle.properties
@@ -2,5 +2,5 @@ android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536M
 
-DESIKARAOKE_JKS_FILE=E:/Flutter/DesiKaraoke.jks
+DESIKARAOKE_JKS_FILE=F:/jksfile/DesiKaraoke.jks
 ANDROID_STORE_PASSWORD=Hello1234
