--- a/desi_karaoke/android/app/src/main/AndroidManifest.xml
+++ b/desi_karaoke/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <application
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/launcher_icon"
         android:label="Desi Karaoke"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
