--- a/desi_karaoke/pubspec.yaml
+++ b/desi_karaoke/pubspec.yaml
@@ -52,13 +52,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: ^0.9.0
-flutter_icons: # flutter pub run flutter_launcher_icons:main
-  image_path: "assets/launcher_icon/DesiKaraokeLogoBoth.png"
-  android: true
+  flutter_launcher_icons: ^0.13.1
+flutter_launcher_icons: # flutter pub run flutter_launcher_icons:main
+  android: "launcher_icon"
   ios: true
-  adaptive_icon_background: "assets/launcher_icon/DesiKaraokeLogoBackground.png" # only available for Android 8.0 devices and above
-  adaptive_icon_foreground: "assets/launcher_icon/DesiKaraokeLogoForeground.png" # only available for Android 8.0 devices and above
+  image_path: "assets/launcher_icon/forbgimagelogo.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
